Refactor suggestion lists to use Collections.emptyList().